<resources>
    <string name="app_name">Learn Exponents</string>

    <string name="action_settings">Settings</string>

    <!-- Navigation Drawer Application Title and Application Description -->
    <string name="application_title">Teacher AICA</string>
    <string name="application_desc">A Mobile-Assisted Exponent Solver and Learning Application</string>

    <!-- For Hamburger Icon Animation -->
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <!-- Navigation Drawer Menu Titles -->
    <string name="nav_drawer_title_solve_exponents">Solve Exponents</string>
    <string name="nav_drawer_title_reading_materials">Reading Materials</string>
    <string name="nav_drawer_title_lectures">Lectures</string>

    <!-- Navigation Drawer Miscellaneous Menu Titles -->
    <string name="nav_drawer_title_view_history">View History</string>
    <string name="nav_drawer_title_check_for_updates">Check for Updates</string>
    <string name="nav_drawer_title_user_manual">User Manual</string>
    <string name="nav_drawer_title_about_us">About Us</string>

    <!-- Tip of the Day Text -->
    <string name="tip_of_the_day_title">TIP OF THE DAY</string>

    <!-- Default Fragment Text -->
    <string name="default_frag_prompt">Navigate through the app\'s functions by swiping the screen from left to right :)</string>

    <!-- Solve Exponents Section Text -->
    <string name="mode_input_one_title">Solve COMPUTER-GENERATED Problems</string>
    <string name="mode_input_two_title">Solve USER-INPUT Problems</string>

    <string name="solve_problem_btn_text">Solve Problem</string>
    <string name="cancel_problem_btn_text">Go Back</string>

    <string name="generated_problem_title">GENERATED PROBLEM</string>

    <string name="input_problem_title">INPUT EXPONENT PROBLEM</string>

    <string name="problem_input_hint">Enter valid input</string>

    <string name="validate_problem_title">SOLVE THIS EQUATION?</string>
    <string name="validate_problem_btn_text">Validate Equation</string>
    <string name="submit_problem_btn_text">Continue</string>
    <string name="cancel_input_problem_btn_text">Go Back</string>

    <!-- Solve Problem Section Text -->
    <string name="abort_problem_title">ABORT PROBLEM SOLVING?</string>

    <string name="abort_problem_btn_text">Abort Solving</string>

    <string name="resume_problem_btn_text">Resume Solving</string>

    <string name="solve_problem_problem_title">Equation</string>

    <string name="solve_problem_equation">3x*6x</string>

    <!-- Lectures Section Text -->
    <string name="lecture_introduction_title">Introduction</string>
    <string name="lecture_introduction_desc">Lecture Objectives, What to Gain from these Lessons</string>

    <string name="lecture_base_raised_to_zero_title">Base Raised to Zero</string>
    <string name="lecture_base_raised_to_zero_desc">Discussion of Base Raised to Zero Concepts</string>

    <string name="lecture_positive_integer_exponents_title">Positive Integer Exponents</string>
    <string name="lecture_positive_integer_exponents_desc">Discussion of Positive Integer Exponents Concepts</string>

    <string name="lecture_addition_of_exponents_with_the_same_bases_title">Addition of Exponents with the Same Bases</string>
    <string name="lecture_addition_of_exponents_with_the_same_bases_desc">Discussion of Addition of Exponents with the Same Bases Concepts</string>

    <string name="lecture_multiplication_of_bases_with_the_same_exponents_title">Multiplication of Bases with the Same Exponents</string>
    <string name="lecture_multiplication_of_bases_with_the_same_exponents_desc">Discussion of Multiplication of Bases with the Same Exponents Concepts</string>

    <string name="lecture_multiplication_of_exponents_to_find_the_power_of_a_power_title">Multiplication of Exponents to Find the Power of a Power</string>
    <string name="lecture_multiplication_of_exponents_to_find_the_power_of_a_power_desc">Discussion of Multiplication of Exponents to Find the Power of a Power Concepts</string>

    <string name="lecture_subtraction_of_exponents_title">Subtraction of Exponents</string>
    <string name="lecture_subtraction_of_exponents_desc">Discussion of Subtraction of Exponents Concepts</string>

    <string name="lecture_negative_integer_exponents_title">Negative Integer Exponents</string>
    <string name="lecture_negative_integer_exponents_desc">Discussion of Negative Integer Exponents Concepts</string>

    <!-- Reading Materials Section Text -->
    <string name="reading_materials_positive_integer_exponents_title">Positive Integer Exponents</string>
    <string name="reading_materials_positive_integer_exponents_desc">Concepts and Examples regarding Positive Integer Exponents</string>

    <string name="reading_materials_base_raised_to_zero_title">Base Raised to Zero</string>
    <string name="reading_materials_base_raised_to_zero_desc">Concepts and Examples regarding Exponents with Base Raised to Zero</string>

    <string name="reading_materials_addition_of_exponents_with_the_same_bases_title">Addition of Exponents with Same Bases</string>
    <string name="reading_materials_addition_of_exponents_with_the_same_bases_desc">Concepts and Examples regarding Addition of Exponents with Same Bases</string>

    <string name="reading_materials_multiplication_of_bases_with_the_same_exponents_title">Multiplication of Bases with the Same Exponents</string>
    <string name="reading_materials_multiplication_of_bases_with_the_same_exponents_desc">Concepts and Examples regarding Multiplication of Bases with the Same Exponents</string>

    <string name="reading_materials_multiplication_of_exponents_to_find_the_power_of_a_power_title">Multiplication of Exponents to Find the Power of a Power</string>
    <string name="reading_materials_multiplication_of_exponents_to_find_the_power_of_a_power_desc">Concepts and Examples regarding Multiplication of Exponents to Find the Power of a Power</string>

    <string name="reading_materials_subtraction_of_exponents_title">Subtraction of Exponents</string>
    <string name="reading_materials_subtraction_of_exponents_desc">Concepts and Examples regarding Subtraction of Exponents</string>

    <string name="reading_materials_negative_integer_exponents_title">Negative Integer Exponents</string>
    <string name="reading_materials_negative_integer_exponents_desc">Concepts and Examples regarding Negative Integer Exponents</string>

    <!-- User Manual Section Text -->
    <string name="solve_exponents_user_manual_title">Solve Exponents Section Manual</string>
    <string name="solve_exponents_user_manual_desc">All information regarding the Solve Exponents section are located here</string>

    <string name="reading_materials_user_manual_title">Reading Materials Section Manual</string>
    <string name="reading_materials_user_manual_desc">All information regarding the Reading Materials section are located here</string>

    <string name="lectures_user_manual_title">Lectures Section Manual</string>
    <string name="lectures_user_manual_desc">All information regarding the Lectures section are located here</string>


</resources>
