<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_solve_exponents"
            android:icon="@drawable/ic_solve_exponents"
            android:title="@string/nav_drawer_title_solve_exponents"/>
        <item
            android:id="@+id/nav_reading_materials"
            android:icon="@drawable/ic_reading_materials"
            android:title="@string/nav_drawer_title_reading_materials"/>
        <item
            android:id="@+id/nav_lectures"
            android:icon="@drawable/ic_lectures"
            android:title="@string/nav_drawer_title_lectures"/>
    </group>

    <item android:title="Miscellaneous">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_view_history"
                    android:icon="@drawable/ic_view_history"
                    android:title="@string/nav_drawer_title_view_history"/>
                <item
                    android:id="@+id/nav_check_for_updates"
                    android:icon="@drawable/ic_check_for_updates"
                    android:title="@string/nav_drawer_title_check_for_updates"/>
                <item
                    android:id="@+id/nav_user_manual"
                    android:icon="@drawable/ic_user_manual"
                    android:title="@string/nav_drawer_title_user_manual"/>
                <item
                    android:id="@+id/nav_about_us"
                    android:icon="@drawable/ic_about_us"
                    android:title="@string/nav_drawer_title_about_us"/>
            </group>
        </menu>
    </item>
</menu>