<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                android:paddingTop="10dp" >

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/input_problem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/problem_input_hint"
        app:met_baseColor="@color/colorPrimaryDark"
        app:met_primaryColor="@color/darkGreen"
        app:met_floatingLabel="normal"
        android:inputType="text"
        app:met_errorColor="#ddaa00" />

    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="20dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/submit_problem_btn"
            android:text="@string/submit_problem_btn_text"
            android:textColor="@color/colorAccent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textStyle="bold"
            style="@style/Widget.AppCompat.Button.Borderless"/>

        <Button
            android:id="@+id/cancel_input_problem_btn"
            android:text="@string/cancel_input_problem_btn_text"
            android:textColor="@color/colorPrimaryDark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textStyle="bold"
            style="@style/Widget.AppCompat.Button.Borderless"/>

    </LinearLayout>



</LinearLayout>